[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-mircify"
version = "1.0.0"
description = "ComfyUI node for converting images to IRC art blocks"
authors = [
    {name = "ComfyUI-Mircify", email = "bird@birdnest.live"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "numpy",
    "scikit-learn",
    "pillow",
]
keywords = ["comfyui", "irc", "art", "image-processing"]

[project.urls]
Repository = "https://github.com/birdneststream/ComfyUI-Mircify"